--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "postcss": "^8",
     "tailwindcss": "^3",
     "v": "^0.3.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
